editors/tree-sitter/test/corpus/expressions.txt
================================================================================
Bitwise operators (docs/src/reference/operators.md)
================================================================================

fn main() {
    print(flags & mask | other ^^ 1);
    print(1 << n + 1 >> 2);
    print(~0);
    mode |= 4;
    mode >>= 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (binary_expression
                (identifier)
                (identifier))
              (binary_expression
                (identifier)
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (binary_expression
                (integer_literal)
                (binary_expression
                  (identifier)
                  (integer_literal)))
              (integer_literal)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (unary_expression
              (integer_literal)))))
      (assignment_statement
        (identifier)
        (integer_literal))
      (assignment_statement
        (identifier)
        (integer_literal)))))

================================================================================
Operator precedence (docs/src/reference/operators.md)
================================================================================

fn main() {
    print(2 ^ 3 ^ 2);
    print(1 + 2 * 3 < 4 && !done || ok == 1);
    print(-a ^ 2);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (integer_literal)
              (binary_expression
                (integer_literal)
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (binary_expression
                (binary_expression
                  (binary_expression
                    (integer_literal)
                    (binary_expression
                      (integer_literal)
                      (integer_literal)))
                  (integer_literal))
                (unary_expression
                  (identifier)))
              (binary_expression
                (identifier)
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (unary_expression
                (identifier))
              (integer_literal))))))))

================================================================================
Calls, method chains, and namespaced calls (libs/std/tests/test_string.cdl, pgo/pgo-dynlib.cdl)
================================================================================

fn main() {
    assert::assert_eq(string::substring("hello world", 6, 5), "world");
    print(pgo_dynlib::pgo_add_int(1,1));
    print("-Hello-".trim_sequence("-").len());
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (arguments
            (call_expression
              (qualified_identifier
                (identifier)
                (identifier))
              (arguments
                (string_literal)
                (integer_literal)
                (integer_literal)))
            (string_literal))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (qualified_identifier
                (identifier)
                (identifier))
              (arguments
                (integer_literal)
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (method_call_expression
              (method_call_expression
                (string_literal)
                (identifier)
                (arguments
                  (string_literal)))
              (identifier)
              (arguments))))))))

================================================================================
Anonymous functions (libs/std/tests/test_list_hof.cdl)
================================================================================

fn main() {
    assert::assert_eq(list::map(xs, double), [2, 4, 6, 8]);
    assert::assert_eq(list::filter(xs, fn(x) { return x > 2; }), [3, 4]);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (arguments
            (call_expression
              (qualified_identifier
                (identifier)
                (identifier))
              (arguments
                (identifier)
                (identifier)))
            (array_literal
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)))))
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (arguments
            (call_expression
              (qualified_identifier
                (identifier)
                (identifier))
              (arguments
                (identifier)
                (closure_expression
                  (parameter_list
                    (parameter
                      (identifier)))
                  (block
                    (return_statement
                      (binary_expression
                        (identifier)
                        (integer_literal)))))))
            (array_literal
              (integer_literal)
              (integer_literal))))))))

================================================================================
Indexing and slicing (pgo/pgo-std-library.cdl, libs/std/string.cdl)
================================================================================

fn main() {
    let s1 = s[0..2];
    let s2 = s[0];
    let s3 = s[start..start + count];
    let s4 = s[..2];
    let s5 = s[1..];
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (slice_expression
          (identifier)
          (integer_literal)
          (integer_literal)))
      (let_declaration
        (identifier)
        (index_expression
          (identifier)
          (integer_literal)))
      (let_declaration
        (identifier)
        (slice_expression
          (identifier)
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (let_declaration
        (identifier)
        (slice_expression
          (identifier)
          (integer_literal)))
      (let_declaration
        (identifier)
        (slice_expression
          (identifier)
          (integer_literal))))))

================================================================================
Float literals carry an exponent (docs/src/language/types.md)
================================================================================

fn main() {
    let a = 1e3;
    let b = 2.5e-1;
    let c = 1E5;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (float_literal))
      (let_declaration
        (identifier)
        (float_literal))
      (let_declaration
        (identifier)
        (float_literal)))))

================================================================================
A call applies to what a call or an index returned (docs/src/reference/operators.md)
================================================================================

fn main() {
    print(adder(1)(2));
    print(fs[0](x));
    print(make()[0](x));
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (call_expression
                (identifier)
                (arguments
                  (integer_literal)))
              (arguments
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (index_expression
                (identifier)
                (integer_literal))
              (arguments
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (index_expression
                (call_expression
                  (identifier)
                  (arguments))
                (integer_literal))
              (arguments
                (identifier)))))))))

================================================================================
Literals (examples/nbody/nbody_lua.cdl, docs/src/language/collections.md)
================================================================================

fn main() {
    let n = 42;
    let f = 4.84143144246472090;
    let s = "stretch tree of depth \t check:";
    let flag = true;
    let nothing = null;
    let xs = [1, 2, 3];
    let ages = {"ada": 36, "alan": 41};
    let empty = {};
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (integer_literal))
      (let_declaration
        (identifier)
        (float_literal))
      (let_declaration
        (identifier)
        (string_literal
          (escape_sequence)))
      (let_declaration
        (identifier)
        (boolean_literal))
      (let_declaration
        (identifier)
        (null_literal))
      (let_declaration
        (identifier)
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (let_declaration
        (identifier)
        (map_literal
          (map_entry
            (string_literal)
            (integer_literal))
          (map_entry
            (string_literal)
            (integer_literal))))
      (let_declaration
        (identifier)
        (map_literal)))))

================================================================================
Struct literal (examples/nbody/nbody_lua.cdl, examples/binary-trees/binary-trees.cdl)
================================================================================

fn main() {
    let sun = Body {
        x: 0.0,
        y: 0.0,
        mass: SOLAR_MASS
    };
    let t = Tree {left:make_tree(depth),right:make_tree(depth)};
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (struct_literal
          (identifier)
          (field_initializer_list
            (field_initializer
              (identifier)
              (float_literal))
            (field_initializer
              (identifier)
              (float_literal))
            (field_initializer
              (identifier)
              (identifier)))))
      (let_declaration
        (identifier)
        (struct_literal
          (identifier)
          (field_initializer_list
            (field_initializer
              (identifier)
              (call_expression
                (identifier)
                (arguments
                  (identifier))))
            (field_initializer
              (identifier)
              (call_expression
                (identifier)
                (arguments
                  (identifier))))))))))

================================================================================
Enum construction (docs/src/language/enums.md)
================================================================================

fn main() {
    let e = Event::Click(3, 4);
    let q = Event::Quit;
    let k = Key("escape");
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (arguments
            (integer_literal)
            (integer_literal))))
      (let_declaration
        (identifier)
        (qualified_identifier
          (identifier)
          (identifier)))
      (let_declaration
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (string_literal)))))))

================================================================================
If as an expression (examples/binary-trees/binary-trees.cdl)
================================================================================

fn main() {
    let max_depth = if min_depth + 2 >= arg {min_depth + 2} else {arg};
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (if_expression
          (binary_expression
            (binary_expression
              (identifier)
              (integer_literal))
            (identifier))
          (block
            (binary_expression
              (identifier)
              (integer_literal)))
          (else_clause
            (block
              (identifier))))))))

================================================================================
Macro invocations (docs/src/language/macros.md)
================================================================================

fn main() {
    let markup = lmn!(<p>Hello</p>);
    print(width(lmn!(<b/>)));
    let joined = lmn!(<b/>) + tail;
    let empty = lmn!();
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (macro_invocation
          (identifier)
          (macro_body)))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (identifier)
              (arguments
                (macro_invocation
                  (identifier)
                  (macro_body)))))))
      (let_declaration
        (identifier)
        (binary_expression
          (macro_invocation
            (identifier)
            (macro_body))
          (identifier)))
      (let_declaration
        (identifier)
        (macro_invocation
          (identifier))))))

================================================================================
A macro region ends at the balancing parenthesis (docs/src/language/macros.md)
================================================================================

fn main() {
    let a = lmn!(f(g(1)));
    let b = lmn!(<a href="x)y">link</a>);
    let c = lmn!(x // ) not the end
);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (macro_invocation
          (identifier)
          (macro_body)))
      (let_declaration
        (identifier)
        (macro_invocation
          (identifier)
          (macro_body)))
      (let_declaration
        (identifier)
        (macro_invocation
          (identifier)
          (macro_body))))))

================================================================================
An identifier before `!` is not a macro (docs/src/language/macros.md)
================================================================================

fn main() {
    let lmn = 4;
    if !ready { print(lmn); }
    print(lmn != 4);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (integer_literal))
      (expression_statement
        (if_expression
          (unary_expression
            (identifier))
          (block
            (expression_statement
              (call_expression
                (identifier)
                (arguments
                  (identifier)))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (identifier)
              (integer_literal))))))))

================================================================================
A nested type argument list closes with the shift token (docs/src/language/generics.md)
================================================================================

fn main() {
    let b = pick<Box<Box<int>>>(v);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (call_expression
          (identifier)
          (type_arguments
            (generic_type
              (type_identifier)
              (type_arguments
                (generic_type
                  (type_identifier)
                  (type_arguments
                    (type_identifier))))))
          (arguments
            (identifier)))))))

================================================================================
Type arguments at a call, a literal, and a variant (docs/src/language/generics.md)
================================================================================

fn main() {
    let c = Cell<int>{ value: 3 };
    let p = Pair<string, int>{ key: "width", value: 40 };
    print(first<int>(nums));
    print(Slot<int>::Filled(9));
    print(g::Slot<int>::Empty);
    print(s.name_of<int>());
    print(Cell<Cell<int>>{ value: c });
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (struct_literal
          (identifier)
          (type_arguments
            (type_identifier))
          (field_initializer_list
            (field_initializer
              (identifier)
              (integer_literal)))))
      (let_declaration
        (identifier)
        (struct_literal
          (identifier)
          (type_arguments
            (type_identifier)
            (type_identifier))
          (field_initializer_list
            (field_initializer
              (identifier)
              (string_literal))
            (field_initializer
              (identifier)
              (integer_literal)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (identifier)
              (type_arguments
                (type_identifier))
              (arguments
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (qualified_identifier
                (identifier)
                (type_arguments
                  (type_identifier))
                (identifier))
              (arguments
                (integer_literal))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (qualified_identifier
              (qualified_identifier
                (identifier)
                (identifier))
              (type_arguments
                (type_identifier))
              (identifier)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (method_call_expression
              (identifier)
              (identifier)
              (type_arguments
                (type_identifier))
              (arguments)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (struct_literal
              (identifier)
              (type_arguments
                (generic_type
                  (type_identifier)
                  (type_arguments
                    (type_identifier))))
              (field_initializer_list
                (field_initializer
                  (identifier)
                  (identifier))))))))))

================================================================================
An angle bracket that stays a comparison (docs/src/language/generics.md)
================================================================================

fn main() {
    print(a < b);
    print(a < b && c > d);
    print(a < b > c);
    while a < b {
        print(a);
    }
    print(p.x < a);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (identifier)
              (identifier)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (binary_expression
                (identifier)
                (identifier))
              (binary_expression
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (binary_expression
                (identifier)
                (identifier))
              (identifier)))))
      (while_statement
        (binary_expression
          (identifier)
          (identifier))
        (block
          (expression_statement
            (call_expression
              (identifier)
              (arguments
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (binary_expression
              (field_expression
                (identifier)
                (identifier))
              (identifier))))))))

================================================================================
A comparison that reads as a type argument list (docs/src/language/generics.md)
================================================================================

fn main() {
    f(a < b, c > (d));
    p.x < a > (b);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (call_expression
              (identifier)
              (type_arguments
                (type_identifier)
                (type_identifier))
              (arguments
                (identifier))))))
      (expression_statement
        (method_call_expression
          (identifier)
          (identifier)
          (type_arguments
            (type_identifier))
          (arguments
            (identifier)))))))

================================================================================
Struct update and defaults (docs/src/language/types.md)
================================================================================

fn main() {
    let heading = Style { size: 18, bold: true, ..body };
    run("build", Options { ..Default::default() });
    let o = Options::default();
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (let_declaration
        (identifier)
        (struct_literal
          (identifier)
          (field_initializer_list
            (field_initializer
              (identifier)
              (integer_literal))
            (field_initializer
              (identifier)
              (boolean_literal))
            (struct_base
              (identifier)))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string_literal)
            (struct_literal
              (identifier)
              (field_initializer_list
                (struct_base
                  (call_expression
                    (qualified_identifier
                      (identifier)
                      (identifier))
                    (arguments))))))))
      (let_declaration
        (identifier)
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (arguments))))))
